libqt6c/src/libqxmlstream.hpp

typedef struct QIODevice QIODevice;
typedef struct QXmlStreamAttributes QXmlStreamAttributes;
typedef struct QXmlStreamEntityResolver QXmlStreamEntityResolver;
typedef struct QXmlStreamNamespaceDeclaration QXmlStreamNamespaceDeclaration;
typedef struct QXmlStreamReader QXmlStreamReader;
QXmlStreamReader* QXmlStreamReader_new();
QXmlStreamReader* QXmlStreamReader_new2(QIODevice* device);
QXmlStreamReader* QXmlStreamReader_new3(const libqt_string data);
QXmlStreamReader* QXmlStreamReader_new4(const libqt_string data);
QXmlStreamReader* QXmlStreamReader_new5(const char* data);
void QXmlStreamReader_SetDevice(QXmlStreamReader* self, QIODevice* device);
QIODevice* QXmlStreamReader_Device(const QXmlStreamReader* self);
void QXmlStreamReader_AddData(QXmlStreamReader* self, const libqt_string data);
void QXmlStreamReader_AddData2(QXmlStreamReader* self, const libqt_string data);
void QXmlStreamReader_AddData3(QXmlStreamReader* self, const char* data);
void QXmlStreamReader_Clear(QXmlStreamReader* self);
bool QXmlStreamReader_AtEnd(const QXmlStreamReader* self);
int QXmlStreamReader_ReadNext(QXmlStreamReader* self);
bool QXmlStreamReader_ReadNextStartElement(QXmlStreamReader* self);
void QXmlStreamReader_SkipCurrentElement(QXmlStreamReader* self);
int QXmlStreamReader_TokenType(const QXmlStreamReader* self);
libqt_string QXmlStreamReader_TokenString(const QXmlStreamReader* self);
void QXmlStreamReader_SetNamespaceProcessing(QXmlStreamReader* self, bool namespaceProcessing);
bool QXmlStreamReader_NamespaceProcessing(const QXmlStreamReader* self);
bool QXmlStreamReader_IsStartDocument(const QXmlStreamReader* self);
bool QXmlStreamReader_IsEndDocument(const QXmlStreamReader* self);
bool QXmlStreamReader_IsStartElement(const QXmlStreamReader* self);
bool QXmlStreamReader_IsEndElement(const QXmlStreamReader* self);
bool QXmlStreamReader_IsCharacters(const QXmlStreamReader* self);
bool QXmlStreamReader_IsWhitespace(const QXmlStreamReader* self);
bool QXmlStreamReader_IsCDATA(const QXmlStreamReader* self);
bool QXmlStreamReader_IsComment(const QXmlStreamReader* self);
bool QXmlStreamReader_IsDTD(const QXmlStreamReader* self);
bool QXmlStreamReader_IsEntityReference(const QXmlStreamReader* self);
bool QXmlStreamReader_IsProcessingInstruction(const QXmlStreamReader* self);
bool QXmlStreamReader_IsStandaloneDocument(const QXmlStreamReader* self);
long long QXmlStreamReader_LineNumber(const QXmlStreamReader* self);
long long QXmlStreamReader_ColumnNumber(const QXmlStreamReader* self);
long long QXmlStreamReader_CharacterOffset(const QXmlStreamReader* self);
QXmlStreamAttributes* QXmlStreamReader_Attributes(const QXmlStreamReader* self);
libqt_string QXmlStreamReader_ReadElementText(QXmlStreamReader* self);
libqt_list /* of QXmlStreamNamespaceDeclaration* */ QXmlStreamReader_NamespaceDeclarations(const QXmlStreamReader* self);
void QXmlStreamReader_AddExtraNamespaceDeclaration(QXmlStreamReader* self, const QXmlStreamNamespaceDeclaration* extraNamespaceDeclaraction);
void QXmlStreamReader_AddExtraNamespaceDeclarations(QXmlStreamReader* self, const libqt_list /* of QXmlStreamNamespaceDeclaration* */ extraNamespaceDeclaractions);
libqt_list /* of QXmlStreamNotationDeclaration* */ QXmlStreamReader_NotationDeclarations(const QXmlStreamReader* self);
libqt_list /* of QXmlStreamEntityDeclaration* */ QXmlStreamReader_EntityDeclarations(const QXmlStreamReader* self);
int QXmlStreamReader_EntityExpansionLimit(const QXmlStreamReader* self);
void QXmlStreamReader_SetEntityExpansionLimit(QXmlStreamReader* self, int limit);
void QXmlStreamReader_RaiseError(QXmlStreamReader* self);
libqt_string QXmlStreamReader_ErrorString(const QXmlStreamReader* self);
int QXmlStreamReader_Error(const QXmlStreamReader* self);
bool QXmlStreamReader_HasError(const QXmlStreamReader* self);
void QXmlStreamReader_SetEntityResolver(QXmlStreamReader* self, QXmlStreamEntityResolver* resolver);
QXmlStreamEntityResolver* QXmlStreamReader_EntityResolver(const QXmlStreamReader* self);
libqt_string QXmlStreamReader_ReadElementText1(QXmlStreamReader* self, int behaviour);
void QXmlStreamReader_RaiseError1(QXmlStreamReader* self, const libqt_string message);
void QXmlStreamReader_Delete(QXmlStreamReader* self);