QtBeef/src/Qt/qxmlstream.bf

extension CQt
{
	[LinkName("QXmlStreamReader_new")]
	public static extern QXmlStreamReader_Ptr* QXmlStreamReader_new();
	[LinkName("QXmlStreamReader_new2")]
	public static extern QXmlStreamReader_Ptr* QXmlStreamReader_new2(QIODevice_Ptr** device);
	[LinkName("QXmlStreamReader_new3")]
	public static extern QXmlStreamReader_Ptr* QXmlStreamReader_new3(void** data);
	[LinkName("QXmlStreamReader_new4")]
	public static extern QXmlStreamReader_Ptr* QXmlStreamReader_new4(libqt_string data);
	[LinkName("QXmlStreamReader_new5")]
	public static extern QXmlStreamReader_Ptr* QXmlStreamReader_new5(c_char* data);
	[LinkName("QXmlStreamReader_Delete")]
	public static extern void QXmlStreamReader_Delete(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_SetDevice")]
	public static extern void QXmlStreamReader_SetDevice(QXmlStreamReader_Ptr* self, QIODevice_Ptr** device);
	[LinkName("QXmlStreamReader_Device")]
	public static extern QIODevice_Ptr** QXmlStreamReader_Device(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_AddData")]
	public static extern void QXmlStreamReader_AddData(QXmlStreamReader_Ptr* self, void** data);
	[LinkName("QXmlStreamReader_AddData2")]
	public static extern void QXmlStreamReader_AddData2(QXmlStreamReader_Ptr* self, libqt_string data);
	[LinkName("QXmlStreamReader_AddData3")]
	public static extern void QXmlStreamReader_AddData3(QXmlStreamReader_Ptr* self, c_char* data);
	[LinkName("QXmlStreamReader_Clear")]
	public static extern void QXmlStreamReader_Clear(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_AtEnd")]
	public static extern bool QXmlStreamReader_AtEnd(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ReadNext")]
	public static extern QXmlStreamReader_TokenType QXmlStreamReader_ReadNext(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ReadNextStartElement")]
	public static extern bool QXmlStreamReader_ReadNextStartElement(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_SkipCurrentElement")]
	public static extern void QXmlStreamReader_SkipCurrentElement(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_TokenType")]
	public static extern QXmlStreamReader_TokenType QXmlStreamReader_TokenType(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_TokenString")]
	public static extern libqt_string QXmlStreamReader_TokenString(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_SetNamespaceProcessing")]
	public static extern void QXmlStreamReader_SetNamespaceProcessing(QXmlStreamReader_Ptr* self, bool namespaceProcessing);
	[LinkName("QXmlStreamReader_NamespaceProcessing")]
	public static extern bool QXmlStreamReader_NamespaceProcessing(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsStartDocument")]
	public static extern bool QXmlStreamReader_IsStartDocument(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsEndDocument")]
	public static extern bool QXmlStreamReader_IsEndDocument(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsStartElement")]
	public static extern bool QXmlStreamReader_IsStartElement(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsEndElement")]
	public static extern bool QXmlStreamReader_IsEndElement(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsCharacters")]
	public static extern bool QXmlStreamReader_IsCharacters(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsWhitespace")]
	public static extern bool QXmlStreamReader_IsWhitespace(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsCDATA")]
	public static extern bool QXmlStreamReader_IsCDATA(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsComment")]
	public static extern bool QXmlStreamReader_IsComment(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsDTD")]
	public static extern bool QXmlStreamReader_IsDTD(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsEntityReference")]
	public static extern bool QXmlStreamReader_IsEntityReference(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsProcessingInstruction")]
	public static extern bool QXmlStreamReader_IsProcessingInstruction(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_IsStandaloneDocument")]
	public static extern bool QXmlStreamReader_IsStandaloneDocument(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_LineNumber")]
	public static extern c_longlong QXmlStreamReader_LineNumber(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ColumnNumber")]
	public static extern c_longlong QXmlStreamReader_ColumnNumber(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_CharacterOffset")]
	public static extern c_longlong QXmlStreamReader_CharacterOffset(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_Attributes")]
	public static extern QXmlStreamAttributes_Ptr* QXmlStreamReader_Attributes(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ReadElementText")]
	public static extern libqt_string QXmlStreamReader_ReadElementText(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_NamespaceDeclarations")]
	public static extern void* QXmlStreamReader_NamespaceDeclarations(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_AddExtraNamespaceDeclaration")]
	public static extern void QXmlStreamReader_AddExtraNamespaceDeclaration(QXmlStreamReader_Ptr* self, QXmlStreamNamespaceDeclaration_Ptr* extraNamespaceDeclaraction);
	[LinkName("QXmlStreamReader_AddExtraNamespaceDeclarations")]
	public static extern void QXmlStreamReader_AddExtraNamespaceDeclarations(QXmlStreamReader_Ptr* self, void** extraNamespaceDeclaractions);
	[LinkName("QXmlStreamReader_NotationDeclarations")]
	public static extern void* QXmlStreamReader_NotationDeclarations(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_EntityDeclarations")]
	public static extern void* QXmlStreamReader_EntityDeclarations(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_EntityExpansionLimit")]
	public static extern c_int QXmlStreamReader_EntityExpansionLimit(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_SetEntityExpansionLimit")]
	public static extern void QXmlStreamReader_SetEntityExpansionLimit(QXmlStreamReader_Ptr* self, c_int limit);
	[LinkName("QXmlStreamReader_RaiseError")]
	public static extern void QXmlStreamReader_RaiseError(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ErrorString")]
	public static extern libqt_string QXmlStreamReader_ErrorString(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_Error")]
	public static extern QXmlStreamReader_Error QXmlStreamReader_Error(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_HasError")]
	public static extern bool QXmlStreamReader_HasError(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_SetEntityResolver")]
	public static extern void QXmlStreamReader_SetEntityResolver(QXmlStreamReader_Ptr* self, QXmlStreamEntityResolver_Ptr** resolver);
	[LinkName("QXmlStreamReader_EntityResolver")]
	public static extern QXmlStreamEntityResolver_Ptr** QXmlStreamReader_EntityResolver(QXmlStreamReader_Ptr* self);
	[LinkName("QXmlStreamReader_ReadElementText1")]
	public static extern libqt_string QXmlStreamReader_ReadElementText1(QXmlStreamReader_Ptr* self, QXmlStreamReader_ReadElementTextBehaviour behaviour);
	[LinkName("QXmlStreamReader_RaiseError1")]
	public static extern void QXmlStreamReader_RaiseError1(QXmlStreamReader_Ptr* self, libqt_string message);
}
